# pytorch-dev-container

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
containers/: Dockerfile  build.sh  ensure-venv.sh  pyproject.toml
