[project]
name = "pytorch-dev-container"
version = "0.1.0"
description = ""
authors = [
    {name = "Li-Xian Chen",email = "twbrandon7@gmail.com"}
]
requires-python = ">=3.11"


[tool.poetry.dependencies]
torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.5.1%2Bcu124-cp311-cp311-linux_x86_64.whl#sha256=6b2966ede9affe2fd69e0765691ca723ec870e0c34c7761f4d5b8e318383fdaf" }
torchvision = { url = "https://download.pytorch.org/whl/cu124/torchvision-0.20.1%2Bcu124-cp311-cp311-linux_x86_64.whl#sha256=a5f7eb5ef22f34a7d18fcbc27b6c01f7dde5cd530df311cdbdd31169f91cbd98" }
torchaudio = { url = "https://download.pytorch.org/whl/cu124/torchaudio-2.5.1%2Bcu124-cp311-cp311-linux_x86_64.whl#sha256=e98938dcc44ebaab8bd8379545784cfddfc23ae17787389448b7ff9918dc3df9" }
ipykernel = "^6.29.5"


[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
pep8-naming = "^0.14.1"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
